暂存（未完成）
修改内容见https://gitee.com/LC_rosy/weekly-progress/blob/master/25.2.17~25.2.26/vdso%E5%85%B1%E4%BA%AB%E8%B0%83%E5%BA%A6%E5%99%A8debug%E6%97%A5%E5%BF%97.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,9 +43,12 @@ members = [
     "user-lib",
     "vdso",
     "vdso/cops",
+    "vdso/vdso_lib",
     "user_apps/vdso_test",
     "uruntime",
     "user_apps/syscall_test",
     "user_apps/batch_syscall",
+    "user_apps/vdso_scheduler_utest",
+    "apps/vdso_scheduler_ktest",
 ]
 resolver = "2"
