--- a/vdso/Cargo.toml
+++ b/vdso/Cargo.toml
@@ -11,6 +11,7 @@ elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
 memory_addr = { git = "https://github.com/Starry-OS/memory_addr.git" }
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
 xmas-elf = "0.9.0"
+spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 
 async_mem = { path = "../modules/async_mem" }
 axhal = { path = "../modules/axhal" }
