--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,5 @@
 	ignore = dirty
 [submodule "vdso/cops"]
 	path = vdso/cops
-	url = https://github.com/AsyncModules/cops.git
+	url = https://github.com/rosy233333/cops.git
+	branch = shared_scheduler
