1. 实现位置无关的堆分配器和无锁队列 2. 对 vDSO 位置无关属性进行了测试 3. 尚未完成重构，不能完整运行

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,8 @@ members = [
     "user-lib",
     "vdso",
     "vdso/cops",
+    "vdso/heap",
+    "vdso/queue",
     "user_apps/vdso_test",
     "uruntime",
     "user_apps/syscall_test",
