使能 `paging` feature 时，添加 vDSO 地址映射。

--- a/modules/runtime/Cargo.toml
+++ b/modules/runtime/Cargo.toml
@@ -45,3 +45,4 @@ axhal = { path = "../axhal" }
 async_utils = { path = "../async_utils" }
 async_fs = { path = "../async_fs", optional = true }
 trampoline = { path = "../trampoline" }
+vdso = { path = "../../vdso" }
