--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ members = [
     "vdso",
     "vdso/cops",
     "vdso/pilf_buddy_alloc",
+    "vdso/pi_pointer",
     "vdso/queue",
     "user_apps/vdso_test",
     "uruntime",
