自动化构建 vdso 模块。

--- a/vdso/Cargo.toml
+++ b/vdso/Cargo.toml
@@ -10,6 +10,7 @@ xmas-elf = "0.10.0"
 
 [build-dependencies]
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
+regex = "1.8.5"
 
 [dev-dependencies]
 xmas-elf = "0.10.0"
