--- a/modules/trampoline/Cargo.toml
+++ b/modules/trampoline/Cargo.toml
@@ -6,28 +6,28 @@ edition = "2021"
 [features]
 default = ["multitask"]
 
-thread = ["taskctx/thread", "sync/thread", "executor/thread", "task_api/thread"]
+thread = ["taskctx/thread", "sync/thread", "process/thread", "task_api/thread"]
 
 multitask = []
 
 monolithic = ["taskctx/thread", "irq", "multitask", "preempt"]
 
-irq = ["sync/irq", "executor/irq", "axhal/irq", "task_api/irq"]
+irq = ["sync/irq", "process/irq", "axhal/irq", "task_api/irq"]
 
-smp = ["spinlock/smp", "executor/smp"]
+smp = ["spinlock/smp", "process/smp"]
 
 preempt = [
     "irq",
     "percpu/preempt",
     "kernel_guard/preempt",
-    "executor/preempt",
+    "process/preempt",
     "taskctx/preempt",
 ]
 
-sched_fifo = ["multitask", "executor/sched_fifo"]
-sched_rr = ["multitask", "executor/sched_rr", "preempt"]
-sched_cfs = ["multitask", "executor/sched_cfs", "preempt"]
-sched_taic = ["multitask", "executor/sched_taic", "syscall/sched_taic"]
+sched_fifo = ["multitask", "process/sched_fifo"]
+sched_rr = ["multitask", "process/sched_rr", "preempt"]
+sched_cfs = ["multitask", "process/sched_cfs", "preempt"]
+sched_taic = ["multitask", "process/sched_taic", "syscall/sched_taic"]
 
 [dependencies]
 log = "0.4"
@@ -44,7 +44,7 @@ syscalls = { version = "0.6", default-features = false }
 task_api = { path = "../task_api" }
 sync = { path = "../sync" }
 taskctx = { path = "../taskctx" }
-executor = { path = "../executor" }
+process = { path = "../process" }
 axhal = { path = "../axhal" }
 syscall = { path = "../syscall" }
 async_mem = { path = "../async_mem" }
