--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ members = [
     "modules/async_mem",
     "modules/taskctx",
     "modules/trampoline",
-    "modules/executor",
+    "modules/process",
     "modules/sync",
     "modules/runtime",
     "modules/arch_boot",
@@ -49,5 +49,8 @@ members = [
     "uruntime",
     "user_apps/syscall_test",
     "user_apps/batch_syscall",
+    "crates/pilf_queue",
+    "crates/pilf_buddy_alloc",
+    "crates/pi_pointer",
 ]
 resolver = "2"
