--- a/modules/taskctx/Cargo.toml
+++ b/modules/taskctx/Cargo.toml
@@ -26,6 +26,7 @@ numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
 spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 percpu = { git = "https://github.com/Starry-OS/percpu.git" }
+vdso = { path = "../../vdso" }
 
 axhal = { path = "../axhal" }
 crate_interface = "0.1"
