去掉与 taic 相关的调度 feature 和系统调用处理逻辑。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "apps/user_boot",
     "apps/fs/shell",
     "apps/thread_test",
+    "apps/echoserver",
     "evaluation",
     "modules/async_utils",
     "modules/async_io",
