--- a/vdso/Cargo.toml
+++ b/vdso/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 log = "0.4"
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
 xmas-elf = "0.10.0"
+scheduler = { path = "../crates/scheduler" }
 
 [build-dependencies]
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
