1. 将 process 模块区分，只有在只能  monolithic feature 时才使用。 2. 初始化时，区分不同模式下的初始化。 2. 使用 vdso 提供的调度。

--- a/modules/trampoline/Cargo.toml
+++ b/modules/trampoline/Cargo.toml
@@ -10,7 +10,7 @@ thread = ["taskctx/thread", "sync/thread", "process/thread", "task_api/thread"]
 
 multitask = []
 
-monolithic = ["taskctx/thread", "irq", "multitask", "preempt"]
+monolithic = ["taskctx/thread", "irq", "multitask", "preempt", "process"]
 
 irq = ["sync/irq", "process/irq", "axhal/irq", "task_api/irq"]
 
@@ -43,7 +43,7 @@ syscalls = { version = "0.6", default-features = false }
 task_api = { path = "../task_api" }
 sync = { path = "../sync" }
 taskctx = { path = "../taskctx" }
-process = { path = "../process" }
+process = { path = "../process", optional = true }
 axhal = { path = "../axhal" }
 syscall = { path = "../syscall" }
 async_mem = { path = "../async_mem" }
@@ -67,3 +67,4 @@ num_enum = { version = "0.5.11", default-features = false }
 async-trait = "0.1.83"
 
 async_io = { path = "../async_io" }
+vdso = { path = "../../vdso" }
