--- a/modules/trampoline/Cargo.toml
+++ b/modules/trampoline/Cargo.toml
@@ -33,7 +33,7 @@ log = "0.4"
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
 spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 kernel_guard = { path = "../kernel_guard" }
-percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
+percpu = { version = "0.2", optional = true }
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
 spin = "0.9"
