--- a/modules/arch_boot/Cargo.toml
+++ b/modules/arch_boot/Cargo.toml
@@ -23,6 +23,7 @@ axhal = { path = "../axhal" }
 vdso = { path = "../../vdso" }
 xmas-elf = "0.10.0"
 heapless = "0.8"
+percpu = "0.2"
 
 [build-dependencies]
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
