--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -33,13 +33,13 @@ ratio = { git = "https://github.com/Starry-OS/ratio.git" }
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
 page_table = { git = "https://github.com/Starry-OS/page_table.git", optional = true }
 page_table_entry = { git = "https://github.com/Starry-OS/page_table_entry.git" }
-percpu = { git = "https://github.com/Starry-OS/percpu.git" }
+percpu = "0.2"
 memory_addr = { git = "https://github.com/Starry-OS/memory_addr.git" }
 handler_table = { git = "https://github.com/Starry-OS/handler_table.git" }
 crate_interface = { git = "https://github.com/Starry-OS/crate_interface.git" }
 axfs_ramfs = { git = "https://github.com/Starry-OS/axfs_ramfs.git", optional = true }
-of = { git = "https://github.com/Starry-OS/of.git"}
-kernel_guard = { path = "../kernel_guard"}
+of = { git = "https://github.com/Starry-OS/of.git" }
+kernel_guard = { path = "../kernel_guard" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86 = "0.52"
@@ -54,7 +54,7 @@ sbi-rt = { version = "0.0.3", features = ["legacy"] }
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 aarch64-cpu = "9.4"
 tock-registers = "0.8"
-either = {version = "1.6", default-features = false}
+either = { version = "1.6", default-features = false }
 arm_gic = { git = "https://github.com/Starry-OS/arm_gic.git" }
 arm_pl011 = { git = "https://github.com/Starry-OS/arm_pl011.git" }
 dw_apb_uart = { git = "https://github.com/Starry-OS/dw_apb_uart.git" }
