解决使能 preempt 时，尝试获取当前任务，但是 vdso 未初始化的 bug，新增了判断 vdso 是否初始化的逻辑。

--- a/modules/taskctx/Cargo.toml
+++ b/modules/taskctx/Cargo.toml
@@ -14,7 +14,7 @@ preempt = ["thread"]
 sched_fifo = []
 sched_rr = ["preempt"]
 sched_cfs = ["preempt"]
-monolithic = []
+monolithic = ["preempt", "kernel_guard/preempt"]
 
 [dependencies]
 log = "0.4"
