在用户态成功运行vdso。
- 在用户态编写了调用和测试vdso的代码。
- 然而，从内核将vdso映射到用户态的代码仍需修改。

--- a/user_apps/vdso_test/Cargo.toml
+++ b/user_apps/vdso_test/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 xmas-elf = "0.9.0"
+api = { path = "../../../vdso_crate_template/api", features = ["log"] }
+# env_logger = "0.9"
