- 修改构建脚本，使主Makefile调用vdso相关的构建。 - 移除不需要的模块。

--- a/vdso/Makefile
+++ b/vdso/Makefile
@@ -1,7 +1,11 @@
-TARGET = riscv64gc-unknown-linux-musl
+ARCH = riscv64
 MODE = release
 OBJCOPY = riscv64-linux-musl-objcopy
 
+VDSO_CRATE_PATH = ../../vdso_crate_template
+VDSO_TARGET_NAME = libvdsoexample.so
+
 build:
-	cd cops && cargo build --release
-	@$(OBJCOPY) -S target/$(TARGET)/$(MODE)/libcops.so target/$(TARGET)/$(MODE)/libcops.so
+	cd $(VDSO_CRATE_PATH) && make all ARCH=$(ARCH) MODE=$(MODE)
+	cd -
+	@$(OBJCOPY) -S $(VDSO_CRATE_PATH)/$(VDSO_TARGET_NAME) $(VDSO_TARGET_NAME)
