--- a/user_apps/vdso_test/Cargo.toml
+++ b/user_apps/vdso_test/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 xmas-elf = "0.9.0"
 api = { path = "../../../vdso_crate_template/api", features = ["log"] }
+libc = "0.2"
 # env_logger = "0.9"
